[package]
name = "erc20-bridge-session"
description = "A batch transaction session contract"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contract = { package = "casper-contract", version="=1.4.3" }
types = { package = "casper-types", version="=1.4.5" }

[lib]
crate-type = ["cdylib", "lib"]
name = "erc20_bridge_session"

[features]
default = ["contract/std", "types/std"]