[package]
name = "tests"
version = "0.1.0"
edition = "2018"

[dev-dependencies]
casper-contract = { version = "1.4.4", default-features = false, features = ["test-support"] }
casper-engine-test-support = { version = "2.2.0", features = ["test-support"] }
casper-execution-engine = "2.0.0"
casper-types = "1.5.0"
hex = { version = "0.4.3", default-features = false }

[lib]
name = "lib"
path = "src/lib.rs"
bench = false
doctest = false

